Fixed pom.xml and updated models to be records